cmake_minimum_required(VERSION 3.14)
project(bls_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(bls INTERFACE)
target_include_directories(bls INTERFACE include)
add_executable(test_bls tests/test_bls.cpp)
target_link_libraries(test_bls bls)
enable_testing()
add_test(NAME bls COMMAND test_bls)
